<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6dcd1"
    android:visibility="visible"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/back_button_contact2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="25dp"
        android:onClick="Back"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button3"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/input_username_1"
        android:layout_width="313dp"
        android:layout_height="40dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/rounded_textbox"
        android:ems="10"
        android:fontFamily="@font/gilda_display"
        android:gravity="center"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_username_2"
        android:layout_width="313dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_textbox"
        android:ems="10"
        android:fontFamily="@font/gilda_display"
        android:gravity="center"
        android:hint="@string/confirm_username_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username_1" />

    <EditText
        android:id="@+id/input_password_1"
        android:layout_width="313dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_textbox"
        android:ems="10"
        android:fontFamily="@font/gilda_display"
        android:gravity="center"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username_2" />

    <EditText
        android:id="@+id/input_password_2"
        android:layout_width="313dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_textbox"
        android:ems="10"
        android:fontFamily="@font/gilda_display"
        android:gravity="center"
        android:hint="@string/confirm_password_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_1" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gilda_display"
        android:onClick="createAccount"
        android:text="@string/create_account_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_2" />
</androidx.constraintlayout.widget.ConstraintLayout>